<resources>
    <string name="app_name">Bookmaker</string>
    <string name="mail">e-mail</string>
    <string name="pass">hasło</string>
    <string name="login">zaloguj</string>
    <string name="points">0</string>

    mainpage - kategorie
    <string name="football">Piłka Nożna</string>
    <string name="tennis">Tennis</string>
    <string name="basketball">Koszykówka</string>
    <string name="mma">Mixed Martial Arts</string>
    <string name="golf">Golf</string>
    <string name="politics">Polityka</string>
    <string name="hockey">Hokej</string>
    <string name="am_footbal">Football Amerykański</string>
    <string name="Aus_football">Football Australijski</string>
    <string name="rugby">Rugby</string>
    <string name="baseball">Baseball</string>
    <string name="cricket">Krykiet</string>

    football - ligi
    <string name="soccer_argentina_primera_division">	Primera División - Argentina	</string>
    <string name="soccer_australia_aleague">	A-League	</string>
    <string name="soccer_austria_bundesliga">	Austrian Football Bundesliga	</string>
    <string name="soccer_belgium_first_div">	Belgium First Div	</string>
    <string name="soccer_brazil_campeonato">	Brazil Série A	</string>
    <string name="soccer_brazil_serie_b">	Brazil Série B	</string>
    <string name="soccer_chile_campeonato">	Primera División - Chile	</string>
    <string name="soccer_china_superleague">	Super League - China	</string>
    <string name="soccer_denmark_superliga">	Denmark Superliga	</string>
    <string name="soccer_efl_champ">	Championship	</string>
    <string name="soccer_england_efl_cup">	EFL Cup	</string>
    <string name="soccer_england_league1">	League 1	</string>
    <string name="soccer_england_league2">	League 2	</string>
    <string name="soccer_epl">	Premier League - England	</string>
    <string name="soccer_fa_cup">	FA Cup	</string>
    <string name="soccer_fifa_world_cup">	FIFA World Cup	</string>
    <string name="soccer_fifa_world_cup_winner">	FIFA World Cup Winner	</string>
    <string name="soccer_finland_veikkausliiga">	Veikkausliiga - Finland	</string>
    <string name="soccer_france_ligue_one">	Ligue 1 - France	</string>
    <string name="soccer_france_ligue_two">	Ligue 2 - France	</string>
    <string name="soccer_germany_bundesliga">	Bundesliga - Germany	</string>
    <string name="soccer_germany_bundesliga2">	Bundesliga 2 - Germany	</string>
    <string name="soccer_germany_liga3">	3. Liga - Germany	</string>
    <string name="soccer_greece_super_league">	Super League - Greece	</string>
    <string name="soccer_italy_serie_a">	Serie A - Italy	</string>
    <string name="soccer_italy_serie_b">	Serie B - Italy	</string>
    <string name="soccer_japan_j_league">	J League	</string>
    <string name="soccer_korea_kleague1">	K League 1	</string>
    <string name="soccer_league_of_ireland">	League of Ireland	</string>
    <string name="soccer_mexico_ligamx">	Liga MX	</string>
    <string name="soccer_netherlands_eredivisie">	Dutch Eredivisie	</string>
    <string name="soccer_norway_eliteserien">	Eliteserien - Norway	</string>
    <string name="soccer_poland_ekstraklasa">	Ekstraklasa - Poland	</string>
    <string name="soccer_portugal_primeira_liga">	Primeira Liga - Portugal	</string>
    <string name="soccer_russia_premier_league">	Premier League - Russia	</string>
    <string name="soccer_spain_la_liga">	La Liga - Spain	</string>
    <string name="soccer_spain_segunda_division">	La Liga 2 - Spain	</string>
    <string name="soccer_spl">	Premiership - Scotland	</string>
    <string name="soccer_sweden_allsvenskan">	Allsvenskan - Sweden	</string>
    <string name="soccer_sweden_superettan">	Superettan - Sweden	</string>
    <string name="soccer_switzerland_superleague">	Swiss Superleague	</string>
    <string name="soccer_turkey_super_league">	Turkey Super League	</string>
    <string name="soccer_uefa_europa_conference_league">	UEFA Europa Conference League	</string>
    <string name="soccer_uefa_champs_league">	UEFA Champions League	</string>
    <string name="soccer_uefa_europa_league">	UEFA Europa League	</string>
    <string name="soccer_uefa_nations_league">	UEFA Nations League	</string>
    <string name="soccer_conmebol_copa_libertadores">	Copa Libertadores	</string>
    <string name="soccer_usa_mls">	MLS	</string>
    <string name="tennis_wta_wimbledon">WTA Wimbledon</string>
    <string name="tennis_wta_us_open">WTA US Open</string>
    <string name="tennis_wta_french_open">WTA French Open</string>
    <string name="tennis_wta_aus_open_singles">WTA Australian Open</string>
    <string name="tennis_atp_wimbledon">ATP Wimbledon</string>
    <string name="tennis_atp_us_open">ATP US Open</string>
    <string name="tennis_atp_french_open">ATP French Open</string>
    <string name="tennis_atp_aus_open_singles">ATP Australian Open</string>
    <string name="cricket_psl">Pakistan Super League</string>
    <string name="cricket_odi">One Day Internationals</string>
    <string name="cricket_ipl">IPL</string>
    <string name="cricket_international_t20">International Twenty20</string>
    <string name="cricket_icc_world_cup">ICC World Cup</string>
    <string name="cricket_caribbean_premier_league">Caribbean Premier League</string>
    <string name="cricket_big_bash">Big Bash</string>


</resources>