<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C33AF"
    tools:context=".football">
    <include
        layout="@layout/coupon_box" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:elevation="1dp"
        android:id="@+id/constraintLayout"
        android:layout_width="393dp"
        android:layout_height="60dp"
        android:background="#051A9F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="223dp"
            android:layout_height="54dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:scaleX="1"
            android:text="BOOKMAKER"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="28dp"
            android:layout_height="48dp"
            android:layout_marginStart="54dp"
            android:gravity="center"
            android:scaleX="1"
            android:text="@string/points"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="393dp"
        android:layout_height="75dp"
        android:background="#051A9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"></androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="333dp"
        android:layout_height="623dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_epl" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_spain_la_liga" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_france_ligue_one" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_italy_serie_a" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_germany_bundesliga" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_uefa_champs_league" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_uefa_europa_league" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_uefa_europa_conference_league" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_uefa_nations_league" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_conmebol_copa_libertadores" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_australia_aleague" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_austria_bundesliga" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_belgium_first_div" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_brazil_campeonato" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_brazil_serie_b" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_chile_campeonato" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_china_superleague" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_denmark_superliga" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_denmark_superliga" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_efl_champ" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_england_efl_cup" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_england_league1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_england_league2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_fa_cup" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_finland_veikkausliiga" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_france_ligue_one" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_france_ligue_two" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_germany_bundesliga2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_germany_liga3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_greece_super_league" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_italy_serie_b" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_japan_j_league" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_korea_kleague1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_league_of_ireland" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_mexico_ligamx" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_netherlands_eredivisie" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_norway_eliteserien" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_poland_ekstraklasa" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_portugal_primeira_liga" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_russia_premier_league" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_argentina_primera_division" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_spain_segunda_division" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_spl" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_sweden_allsvenskan" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_sweden_superettan" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_switzerland_superleague" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C53CF"
                android:text="@string/soccer_turkey_super_league" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="15dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>