<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#1C33AF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="393dp"
        android:layout_height="75dp"
        android:background="#051A9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="23dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/football"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/football" />

        <Button
            android:id="@+id/tennis"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/tennis" />

        <Button
            android:id="@+id/basketball"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/basketball" />

        <Button
            android:id="@+id/mma"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/mma" />

        <Button
            android:id="@+id/golf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/golf" />

        <Button
            android:id="@+id/politics"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/politics" />

        <Button
            android:id="@+id/hockey"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/hockey" />

        <Button
            android:id="@+id/american_football"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/am_footbal" />

        <Button
            android:id="@+id/australian_football"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/Aus_football" />

        <Button
            android:id="@+id/rugby"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/rugby" />

        <Button
            android:id="@+id/baseball"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/baseball" />

        <Button
            android:id="@+id/cricket"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#3C53CF"
            android:text="@string/cricket" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="393dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp"
        android:background="#051A9F"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="223dp"
            android:layout_height="54dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:scaleX="1"
            android:text="BOOKMAKER"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="28dp"
            android:layout_height="48dp"
            android:layout_marginStart="54dp"
            android:gravity="center"
            android:scaleX="1"
            android:text="@string/points"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>